Configuracion de la base

--- a/.gitignore
+++ b/.gitignore
@@ -5,12 +5,12 @@
 # Packaging files:
 *.egg*
 
-# Editor temp files:
-*.swp
-*~
-
 # Sphinx docs:
 build
 
 # SQLite3 database files:
 *.db
+
+*.jpg
+
+*.png
